<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="650dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dummybug"
            android:backgroundTint="@color/azulFondos">

            <Spinner
                android:id="@+id/spDialogMunicipioOrigen"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/dummybug"
                android:elevation="10dp"
                android:entries="@array/municipios"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txDialogoDireccionDestino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/textoNegroDia"
                android:ems="10"
                android:hint="@string/direccion"
                android:inputType="textPersonName"
                android:textColor="@color/textoNegroDia"
                android:textColorLink="@color/textoNegroDia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/spDialogoMunicipioDestino"
                app:layout_constraintStart_toStartOf="@+id/spDialogoMunicipioDestino"
                app:layout_constraintTop_toBottomOf="@+id/spDialogoMunicipioDestino"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/origen"
                android:textColor="@color/textoNegroDia"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txDialogoDireccionOrigen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/textoNegroDia"
                android:ems="10"
                android:hint="Dirección"
                android:inputType="textPersonName"
                android:textColor="@color/textoNegroDia"
                android:textColorLink="@color/textoNegroDia"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="@+id/spDialogMunicipioOrigen"
                app:layout_constraintStart_toStartOf="@+id/spDialogMunicipioOrigen"
                app:layout_constraintTop_toBottomOf="@+id/spDialogMunicipioOrigen"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="216dp"
                android:background="@color/textoNegroDia"
                android:backgroundTint="@color/textoNegroDia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                app:layout_constraintVertical_bias="0.027" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center|center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txDialogoDireccionDestino"
                app:layout_constraintVertical_bias="0.95">

                <Button
                    android:id="@+id/btCerrarEstab"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/dummybug"
                    android:backgroundTint="#C6A0A0"
                    android:elevation="10dp"
                    android:text="@string/cerrar" />

                <Button
                    android:id="@+id/btDirecEstab"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/dummybug"
                    android:backgroundTint="@color/white"
                    android:elevation="10dp"
                    android:text="@string/planificar"
                    android:textColor="@color/textoNegroDia" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/destino"
                android:textColor="@color/textoNegroDia"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/spDialogoMunicipioDestino"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/dummybug"
                android:elevation="10dp"
                android:entries="@array/municipios"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:background="@drawable/topborder"
                android:backgroundTint="@color/azulOscuro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planificador_de_viajes"
                    android:textColor="@color/textoNegroDia"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>