<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="610dp"
    android:background="@drawable/bottomborder"
    android:backgroundTint="@color/azulFondos"
    android:elevation="10dp"
    tools:context="ficheros.TransportesTenerife.practicaguiada.Vistas.Fragments.fragmentOpcionesSecundarias">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="513dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center|center_horizontal|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/botonCerrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/layoutParadaCercana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/dummybug"
                android:elevation="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/botonParadaCercana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="?android:attr/textColorSecondary"
                    android:contentDescription="TODO"
                    android:padding="50dp"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:src="@drawable/icono_paradas_cercanas"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/paradas_cerca"
                    android:textColor="@color/textoNegroDia"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPlanifViaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/dummybug"
                android:elevation="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/botonPlanifViaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@color/textoNegroDia"
                    android:backgroundTintMode="multiply"
                    android:contentDescription="@string/todo"
                    android:padding="50dp"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:src="@drawable/icono_planificador_viajes" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/planificador"
                    android:textColor="@color/textoNegroDia"
                    android:textSize="17sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/layoutNoticias"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/dummybug"
                android:elevation="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/botonNoticias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@color/textoNegroDia"
                    android:backgroundTintMode="src_in"
                    android:contentDescription="TODO"
                    android:padding="50dp"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:src="@drawable/icono_ultimas_noticias" />

                <TextView
                    android:id="@+id/text8"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/ultimasNoticas"
                    android:textColor="@color/textoNegroDia"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/clPuntosVenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/dummybug"
                android:elevation="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingEnd="5dp">

                <ImageButton
                    android:id="@+id/btPuntosVenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="?android:attr/textColorSecondary"
                    android:contentDescription="TODO"
                    android:padding="50dp"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:src="@drawable/icono_puntos_venta" />

                <TextView
                    android:id="@+id/text9"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/punto_de_venta"
                    android:textColor="@color/textoNegroDia"
                    android:textSize="17sp" />
            </LinearLayout>
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/botonCerrar"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/dummybug"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/icon_arrow_up"
        android:elevation="15dp"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

</androidx.constraintlayout.widget.ConstraintLayout>